--- a/scripts/nginx.tmpl
+++ b/scripts/nginx.tmpl
@@ -54,7 +54,7 @@ proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
 server {
 	server_name _; # This is just an invalid value which will never trigger on a real hostname.
 	listen 80;
-	access_log /var/log/nginx/access.log vhost;
+	access_log /opt/nginx/logs/access.log vhost;
 	return 503;
 }
 
@@ -62,7 +62,7 @@ server {
 server {
 	server_name _; # This is just an invalid value which will never trigger on a real hostname.
 	listen 443 ssl http2;
-	access_log /var/log/nginx/access.log vhost;
+	access_log /opt/nginx/logs/access.log vhost;
 	return 503;
 
 	ssl_certificate /opt/certs/default.crt;
@@ -112,14 +112,14 @@ upstream {{ $host }} {
 server {
 	server_name {{ $host }};
 	listen 80 {{ $default_server }};
-	access_log /var/log/nginx/access.log vhost;
+	access_log /opt/nginx/logs/access.log vhost;
 	return 301 https://$host$request_uri;
 }
 
 server {
 	server_name {{ $host }};
 	listen 443 ssl http2 {{ $default_server }};
-	access_log /var/log/nginx/access.log vhost;
+	access_log /opt/nginx/logs/access.log vhost;
 
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 	ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA;
@@ -161,7 +161,7 @@ server {
 server {
 	server_name {{ $host }};
 	listen 80 {{ $default_server }};
-	access_log /var/log/nginx/access.log vhost;
+	access_log /opt/nginx/logs/access.log vhost;
 
 	{{ if (exists (printf "/opt/nginx/conf/vhost.d/%s" $host)) }}
 	include {{ printf "/opt/nginx/conf/vhost.d/%s" $host }};
@@ -187,7 +187,7 @@ server {
 server {
 	server_name {{ $host }};
 	listen 443 ssl http2 {{ $default_server }};
-	access_log /var/log/nginx/access.log vhost;
+	access_log /opt/nginx/logs/access.log vhost;
 	return 503;
 
 	ssl_certificate /opt/certs/default.crt;
